--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         </div>
         <button type="submit" class="btn btn warning" name="button">Submit</button>
       </form>
+      <div class="result">
+      </div>
     </div>
   </body>
 </html>
