add more planets

--- a/index.html
+++ b/index.html
@@ -44,6 +44,28 @@
       </div>
     </div>
     <div class="result">
+      <div class="well">
+        <div class="row">
+          <div class="col-md-2">
+            
+          </div>
+          <div class="col-md-2">
+
+          </div>
+          <div class="col-md-2">
+
+          </div>
+          <div class="col-md-2">
+
+          </div>
+          <div class="col-md-2">
+
+          </div>
+          <div class="col-md-2">
+
+          </div>
+        </div>
+      </div>
     </div>
     </div>
   </body>
