add units to show individual dates based on planets

--- a/index.html
+++ b/index.html
@@ -47,22 +47,67 @@
       <div class="well">
         <div class="row">
           <div class="col-md-2">
-            
+            <img src="images/mercury.gif" alt="Mercury">
+            <div class="timeLivedOnMercury">
+            </div>
+            <div class="timeLeftOnMercury">
+            </div>
           </div>
           <div class="col-md-2">
-
+            <img src="images/venus.gif" alt="Venus">
+            <div class="timeLivedOnVenus">
+            </div>
+            <div class="timeLeftOnVenus">
+            </div>
           </div>
           <div class="col-md-2">
-
+            <img src="images/earth.gif" alt="Earth">
+            <div class="timeLivedOnEarth">
+            </div>
+            <div class="timeLeftOnEarth">
+            </div>
           </div>
           <div class="col-md-2">
-
+            <img src="images/mars.gif" alt="Mars">
+            <div class="timeLivedOnMars">
+            </div>
+            <div class="timeLeftOnMars">
+            </div>
           </div>
           <div class="col-md-2">
-
+            <img src="images/jupiter.gif" alt="Jupiter">
+            <div class="timeLivedOnJupiter">
+            </div>
+            <div class="timeLeftOnJupiter">
+            </div>
           </div>
           <div class="col-md-2">
-
+            <img src="images/Saturn.gif" alt="Saturn">
+            <div class="timeLivedOnSaturn">
+            </div>
+            <div class="timeLeftOnSaturn">
+            </div>
+          </div>
+          <div class="col-md-2">
+            <img src="images/uranus.gif" alt="Uranus">
+            <div class="timeLivedOnUranus">
+            </div>
+            <div class="timeLeftOnUranus">
+            </div>
+          </div>
+          <div class="col-md-2">
+            <img src="images/neptune.gif" alt="Neptune">
+            <div class="timeLivedOnNeptune">
+            </div>
+            <div class="timeLeftOnNeptune">
+            </div>
+          </div>
+          <div class="col-md-2">
+            <img src="images/pluto.gif" alt="Pluto">
+            <div class="timeLivedOnPluto">
+            </div>
+            <div class="timeLeftOnPluto">
+            </div>
           </div>
         </div>
       </div>
