add basic functionality

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2>...where all time is relative...</h2>
       </div>
       <div class="row">
-       <div class="col-md-8">
+       <div class="col-md-12">
          <div class="well">
            <div class="panel panel-primary">
              <div class="panel-heading">
@@ -36,7 +36,8 @@
                 </div>
                 <label for="counties">Country</label>
                 <select class="form-control" id="countries" required></select>
-                <button type="submit" class="btn btn warning" name="button">Submit</button>
+                <br>
+                <button type="submit" class="btn btn-info" name="button">Submit</button>
               </form>
             </div>
           </div>
