modify css file

--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
   </head>
   <body>
     <div class="container">
-      <div class="jumbtron">
-        <h1>It's a Timey Wimey world</h1>
-        <h2>...where all time is relative...</h2>
-      </div>
+      <h1>It's a Timey Wimey world</h1>
+      <h2>...where all time is relative...</h2>
       <div class="row">
        <div class="col-md-12">
          <div class="well">
@@ -52,63 +50,63 @@
             <img src="images/mercury.gif" alt="Mercury">
             <div class="timeLivedOnMercury">
             </div>
-            <div class="timeLeftOnMercury">
+            <div class="timeLeftOnMercury expectancy">
             </div>
           </div>
           <div class="col-md-4">
             <img src="images/venus.gif" alt="Venus">
             <div class="timeLivedOnVenus">
             </div>
-            <div class="timeLeftOnVenus">
+            <div class="timeLeftOnVenus expectancy">
             </div>
           </div>
           <div class="col-md-4">
             <img src="images/earth.gif" alt="Earth">
             <div class="timeLivedOnEarth">
             </div>
-            <div class="timeLeftOnEarth">
+            <div class="timeLeftOnEarth expectancy">
             </div>
           </div>
           <div class="col-md-4">
             <img src="images/mars.gif" alt="Mars">
             <div class="timeLivedOnMars">
             </div>
-            <div class="timeLeftOnMars">
+            <div class="timeLeftOnMars expectancy">
             </div>
           </div>
           <div class="col-md-4">
             <img src="images/jupiter.gif" alt="Jupiter">
             <div class="timeLivedOnJupiter">
             </div>
-            <div class="timeLeftOnJupiter">
+            <div class="timeLeftOnJupiter expectancy">
             </div>
           </div>
           <div class="col-md-4">
             <img src="images/Saturn.gif" alt="Saturn">
             <div class="timeLivedOnSaturn">
             </div>
-            <div class="timeLeftOnSaturn">
+            <div class="timeLeftOnSaturn expectancy">
             </div>
           </div>
           <div class="col-md-4">
             <img src="images/uranus.gif" alt="Uranus">
             <div class="timeLivedOnUranus">
             </div>
-            <div class="timeLeftOnUranus">
+            <div class="timeLeftOnUranus expectancy">
             </div>
           </div>
           <div class="col-md-4">
             <img src="images/neptune.gif" alt="Neptune">
             <div class="timeLivedOnNeptune">
             </div>
-            <div class="timeLeftOnNeptune">
+            <div class="timeLeftOnNeptune expectancy">
             </div>
           </div>
           <div class="col-md-4">
             <img src="images/pluto.gif" alt="Pluto">
             <div class="timeLivedOnPluto">
             </div>
-            <div class="timeLeftOnPluto">
+            <div class="timeLeftOnPluto expectancy">
             </div>
           </div>
         </div>
