add css styling to page

--- a/index.html
+++ b/index.html
@@ -48,64 +48,82 @@
           <h2>Planets:</h2>
           <div class="col-md-4">
             <img src="images/mercury.gif" alt="Mercury">
+            <h5>Time Lived on Mercury(yrs):</h5>
             <div class="timeLivedOnMercury">
             </div>
+            <h5>Life expectancy on planet(yrs):</h5>
             <div class="timeLeftOnMercury expectancy">
             </div>
           </div>
           <div class="col-md-4">
             <img src="images/venus.gif" alt="Venus">
+            <h5>Time Lived on Venus(yrs):</h5>
             <div class="timeLivedOnVenus">
             </div>
+            <h5>Life expectancy on planet(yrs):</h5>
             <div class="timeLeftOnVenus expectancy">
             </div>
           </div>
           <div class="col-md-4">
             <img src="images/earth.gif" alt="Earth">
+            <h5>Time Lived on Earth(yrs):</h5>
             <div class="timeLivedOnEarth">
             </div>
+              <h5>Life expectancy on planet(yrs):</h5>
             <div class="timeLeftOnEarth expectancy">
             </div>
           </div>
           <div class="col-md-4">
             <img src="images/mars.gif" alt="Mars">
+            <h5>Time Lived on Mars(yrs):</h5>
             <div class="timeLivedOnMars">
             </div>
+              <h5>Life expectancy on planet(yrs):</h5>
             <div class="timeLeftOnMars expectancy">
             </div>
           </div>
           <div class="col-md-4">
             <img src="images/jupiter.gif" alt="Jupiter">
+            <h5>Time Lived on Jupiter(yrs):</h5>
             <div class="timeLivedOnJupiter">
             </div>
+              <h5>Life expectancy on planet(yrs):</h5>
             <div class="timeLeftOnJupiter expectancy">
             </div>
           </div>
           <div class="col-md-4">
             <img src="images/Saturn.gif" alt="Saturn">
+            <h5>Time Lived on Saturn(yrs):</h5>
             <div class="timeLivedOnSaturn">
             </div>
+            <h5>Life expectancy on planet(yrs):</h5>
             <div class="timeLeftOnSaturn expectancy">
             </div>
           </div>
           <div class="col-md-4">
             <img src="images/uranus.gif" alt="Uranus">
+            <h5>Time Lived on Uranus(yrs):</h5>
             <div class="timeLivedOnUranus">
             </div>
+            <h5>Life expectancy on planet(yrs):</h5>
             <div class="timeLeftOnUranus expectancy">
             </div>
           </div>
           <div class="col-md-4">
             <img src="images/neptune.gif" alt="Neptune">
+            <h5>Time Lived on Neptune(yrs):</h5>
             <div class="timeLivedOnNeptune">
             </div>
+            <h5>Life expectancy on planet(yrs):</h5>
             <div class="timeLeftOnNeptune expectancy">
             </div>
           </div>
           <div class="col-md-4">
             <img src="images/pluto.gif" alt="Pluto">
+            <h5>Time Lived on Pluto(yrs):</h5>
             <div class="timeLivedOnPluto">
             </div>
+            <h5>Life expectancy on planet(yrs):</h5>
             <div class="timeLeftOnPluto expectancy">
             </div>
           </div>
