update response for age

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
      <script src="build/js/vendor.min.js"></script>
      <script type="text/javascript" src="build/js/app.js"></script>
      <link type="text/css" rel="stylesheet" href="css/time.css">
+     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
   </head>
   <body>
     <div class="container">
-      <h1>It's a Timey Wimey world</h1>
-      <h2>...where all time is relative...</h2>
+      <h1>It's a Timey Wimey world <small>...where all time is relative...ly fun</small></h1>
       <div class="row">
        <div class="col-md-12">
          <div class="well">
