--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
       <h1>It's a Timey Wimey world <small>...where all time is relative...ly fun</small></h1>
-      <div class="row">
+      <div class="row form">
        <div class="col-md-12">
          <div class="well">
            <div class="panel panel-primary">
